Set.of -> Collections.singleton or Stream.of(...).collect(Collectors.toSet())